--- a/cpp/main/src/mainwindow.ui
+++ b/cpp/main/src/mainwindow.ui
@@ -121,28 +121,7 @@
     <property name="title">
      <string>演示</string>
     </property>
-    <widget class="QMenu" name="menu_4">
-     <property name="title">
-      <string>演示自动机生成算法</string>
-     </property>
-     <addaction name="actionAlogLL"/>
-     <addaction name="actionAlogLR0"/>
-     <addaction name="actionAlogLR1"/>
-     <addaction name="actionAlogSLR"/>
-     <addaction name="actionAlogLALR"/>
-    </widget>
-    <widget class="QMenu" name="menu_5">
-     <property name="title">
-      <string>演示自动机</string>
-     </property>
-     <addaction name="actionFALL"/>
-     <addaction name="actionFALR0"/>
-     <addaction name="actionFALR1"/>
-     <addaction name="actionFASLR"/>
-     <addaction name="actionFALALR"/>
-    </widget>
-    <addaction name="menu_4"/>
-    <addaction name="menu_5"/>
+    <addaction name="actionLL"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menubianji"/>
@@ -278,6 +257,11 @@
   <action name="actionFALALR">
    <property name="text">
     <string>LALR</string>
+   </property>
+  </action>
+  <action name="actionLL">
+   <property name="text">
+    <string>LL</string>
    </property>
   </action>
  </widget>
