--- a/cpp/main/src/demo_ll_window.ui
+++ b/cpp/main/src/demo_ll_window.ui
@@ -191,41 +191,21 @@
              <property name="editTriggers">
               <set>QAbstractItemView::NoEditTriggers</set>
              </property>
-             <item>
-              <property name="text">
-               <string>按照某顺序排列非终结符</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>循环 i 从 1 到 n</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>    循环 j 从 1 到 i-1</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>        将 A[i] -&gt; A[j]r 替换为 A[i] -&gt; Br（A[j] -&gt; B）</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>    消除 A[i] 的立即左递归</string>
-              </property>
-             </item>
             </widget>
            </item>
           </layout>
          </widget>
-         <widget class="QWidget" name="widget_3" native="true">
+         <widget class="LLVariableWidget" name="keyWidget" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>3</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
           </property>
          </widget>
         </widget>
@@ -242,6 +222,12 @@
    <class>HorizontalScrollArea</class>
    <extends>QScrollArea</extends>
    <header>view/HorizontalScrollArea.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>LLVariableWidget</class>
+   <extends>QWidget</extends>
+   <header>widget/LLVariableWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
