--- a/cpp/main/src/demo_ll_window.ui
+++ b/cpp/main/src/demo_ll_window.ui
@@ -23,7 +23,7 @@
       <widget class="QWidget" name="scrollAreaWidgetContents">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>-379</x>
          <y>0</y>
          <width>1080</width>
          <height>59</height>
@@ -31,7 +31,7 @@
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton">
+         <widget class="QCommandLinkButton" name="step1">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -41,7 +41,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton_2">
+         <widget class="QCommandLinkButton" name="step2">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -51,7 +51,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton_3">
+         <widget class="QCommandLinkButton" name="step3">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -61,7 +61,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton_4">
+         <widget class="QCommandLinkButton" name="step4">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -71,7 +71,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton_5">
+         <widget class="QCommandLinkButton" name="step5">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -81,7 +81,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QCommandLinkButton" name="commandLinkButton_6">
+         <widget class="QCommandLinkButton" name="step6">
           <property name="enabled">
            <bool>false</bool>
           </property>
