--- a/cpp/main/src/mainwindow.ui
+++ b/cpp/main/src/mainwindow.ui
@@ -123,6 +123,8 @@
     </property>
     <addaction name="actionLL"/>
     <addaction name="actionLL_2"/>
+    <addaction name="actionLR_0"/>
+    <addaction name="actionSLR"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menubianji"/>
@@ -272,6 +274,16 @@
   <action name="actionLL_2">
    <property name="text">
     <string>LL（跳过文法转换）</string>
+   </property>
+  </action>
+  <action name="actionLR_0">
+   <property name="text">
+    <string>LR(0)</string>
+   </property>
+  </action>
+  <action name="actionSLR">
+   <property name="text">
+    <string>SLR</string>
    </property>
   </action>
  </widget>
