--- a/cpp/main/src/demo_lr1_window.ui
+++ b/cpp/main/src/demo_lr1_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>LR(0)/SLR 自动机演示</string>
+   <string>LR(1)/LALR 自动机演示</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
