--- a/cpp/main/src/demo_lr0_window.ui
+++ b/cpp/main/src/demo_lr0_window.ui
@@ -23,10 +23,10 @@
       <widget class="QWidget" name="scrollAreaWidgetContents">
        <property name="geometry">
         <rect>
-         <x>-201</x>
+         <x>0</x>
          <y>0</y>
          <width>902</width>
-         <height>64</height>
+         <height>59</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -199,6 +199,9 @@
           </property>
           <property name="cursor">
            <cursorShape>OpenHandCursor</cursorShape>
+          </property>
+          <property name="contextMenuPolicy">
+           <enum>Qt::CustomContextMenu</enum>
           </property>
          </widget>
         </widget>
